--- a/pr-preview/pr-656/stylesheets/extra.css
+++ b/pr-preview/pr-656/stylesheets/extra.css
@@ -78,9 +78,9 @@
 
   .mdx-hero__content {
     max-width: 380px;
-    margin-top: 10%;
+    /* margin-top: 10%; */
     padding-bottom: 16vw;
-    margin-bottom: 10%;
+    /* margin-bottom: 10%; */
     transform: translateY(40%);
     /* font-size: larger; */
   }
@@ -90,6 +90,23 @@
     width: 380px;
     /* transform: translateY(-120px); */
     /* Remove transform so the image isn’t offset */
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .mdx-hero {
+    display: flex;
+    flex-direction: column;
+  }
+  .mdx-hero__image {
+    padding-top: 10%;
+    order: 1; /* Image appears first */
+  }
+  .mdx-hero__content {
+    order: 2; /* Content appears second */
+    /* Optionally adjust any transforms or padding that were set for larger screens */
+    transform: none;
+    padding-bottom: 20px;
   }
 }
 
@@ -107,7 +124,7 @@
 .mdx-hero .md-button {
   margin-top: 10px;
   margin-right: 10px;
-  color: var(--md-primary-bg-color);
+  color: var(--md-primary-fg-color);
 }
 
 .mdx-hero .md-button:hover,
@@ -121,5 +138,5 @@
 .mdx-hero .md-button--primary {
   color: var(--md-accent-fg-color);
   background-color: var(--md-accent-bg-color);
-  border-color: var(--md-primary-bg-color);
+  border-color: var(--md-primary-fg-color);
 }
