--- a/docs/overrides/partials/toc.html
+++ b/docs/overrides/partials/toc.html
@@ -13,6 +13,7 @@
       </a>
       <a href="{{ page.nb_url }}"
          title="Download Notebook"
+         aria-label="Download this notebook"
          class="md-content__button md-icon"
          target="_blank" rel="noopener noreferrer">
           {% include ".icons/material/download.svg" %}
