Fix toc override path

--- a/docs/overrides/partials/toc.html
+++ b/docs/overrides/partials/toc.html
@@ -1,4 +1,4 @@
-{% extends "material/partials/toc.html" %}
+{% extends "partials/toc.html" %}
 
 {# Insert after the headline (before the list) #}
 {% block title %}
